--- a/App/app.css
+++ b/App/app.css
@@ -4,6 +4,10 @@
 
 #input {
     margin: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 30vw;
 }
 
 #legend {
@@ -86,6 +90,7 @@
 
 .grid-container {
     display: grid;
+    /* justify-content: center; */
     grid-template-columns: repeat(1, 100px);
     padding: 10px;
     overflow-x: auto;
