--- a/App/app.css
+++ b/App/app.css
@@ -3,11 +3,20 @@
 }
 
 #input {
-    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+#input h2 {
+    margin-top: 20px;
+}
+
+#dimensions {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 30vw;
 }
 
 #legend {
@@ -90,7 +99,6 @@
 
 .grid-container {
     display: grid;
-    /* justify-content: center; */
     grid-template-columns: repeat(1, 100px);
     padding: 10px;
     overflow-x: auto;
@@ -101,6 +109,10 @@
     text-align: center;
     aspect-ratio: 1 / 1; /* Ensures items are square */
     overflow: hidden;
+}
+
+.black {
+    background-color: #000; /* Black grid items */
 }
 
 .chair-container-in-grid {
