--- a/App/app.css
+++ b/App/app.css
@@ -1,3 +1,17 @@
+:root {
+    color-scheme: light only;
+}
+
+textarea,
+input.text,
+input[type="text"],
+input[type="button"],
+input[type="submit"],
+.input-checkbox {
+    -webkit-appearance: none;
+    border-radius: 0;
+}
+
 #logo {
     height: 2em;
 }
@@ -6,7 +20,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
 }
 
 #input h2 {
@@ -26,6 +39,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    flex-wrap: wrap;
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 10px;
@@ -34,17 +48,19 @@
     z-index: 1000;
 }
 
-.label {
-    margin-right: 0.5em;
+.mode {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 5px 0 5px;
 }
 
 .mode-logo {
     position: relative;
-    text-align: center;
     color: white;
-    margin-right: 0.25em;
     border: 2px solid transparent; /* Transparent border for inactive state */
-    height: 2em;
+    max-height: 2em;
+    max-width: 2em;
 }
 
 .mode-logo.active-mode {
@@ -53,8 +69,8 @@
 }
 
 .mode-logo-image {
-    height: 100%;
-    width: 100%;
+    max-height: 100%;
+    max-width: 100%;
     padding: 0.1em;
 }
 
@@ -66,17 +82,24 @@
     pointer-events: none;
 }
 
+.mode-logo-image,
+.mode-logo-text {
+    display: block;
+    margin: 0 auto;
+}
+
 .zoom-controls {
     position: fixed;
     bottom: 10px;
     right: 10px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 10px;
-    padding: 5px;
+    padding: 3px;
+    margin: 0px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 1000;
 }
@@ -85,10 +108,10 @@
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin: 2px;
+    padding: 0px;
+    margin: 1px;
     width: 40px;
     height: 40px;
-    font-size: 1.2em;
     cursor: pointer;
     outline: none;
 }
@@ -172,45 +195,15 @@
 }
 
 /* For smaller screens */
-@media (max-width: 580px) {
-    .mode-logo {
-        font-size: 0.75em;
-    }
-    .mode-logo-text {
-        font-size: 0.75em;
-    }
-    .label {
-        font-size: 0.75em;
-    }
-}
-
-@media (max-width: 470px) {
-    .mode-logo {
-        font-size: 0.57em;
-    }
-    .mode-logo-text {
-        font-size: 0.8em;
-    }
-    .label {
-        font-size: 0.57em;
-    }
-
-    .zoom-button {
-        width: 30px;
-        height: 30px;
-        font-size: 1em;
-    }
-}
-
-@media (max-width: 360px) {
-    .mode-logo {
-        font-size: 0.5em;
+@media (max-width: 430px) {
+    .mode-logo-image {
+        font-size: 0.7em;
     }
     .mode-logo-text {
         font-size: 0.9em;
     }
     .label {
-        font-size: 0.5em;
+        font-size: 0.7em;
     }
     .zoom-button {
         width: 30px;
