--- a/App/app.css
+++ b/App/app.css
@@ -1,13 +1,45 @@
+/* Apply user-select none to all elements to prevent text selection */
+* {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE/Edge */
+    user-select: none; /* Standard syntax */
+    -webkit-touch-callout: none; /* iOS Safari */
+    color-scheme: light only;
+}
+
+img {
+    pointer-events: none;
+}
+
+textarea,
+input.text,
+input[type="text"],
+input[type="button"],
+input[type="submit"],
+.input-checkbox {
+    -webkit-appearance: none;
+    border-radius: 0;
+}
+
 #logo {
     height: 2em;
 }
 
 #input {
-    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#input h2 {
+    margin-top: 20px;
+}
+
+#dimensions {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 30vw;
 }
 
 #legend {
@@ -17,6 +49,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    flex-wrap: wrap;
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 10px;
@@ -25,17 +58,19 @@
     z-index: 1000;
 }
 
-.label {
-    margin-right: 0.5em;
+.mode {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 5px 0 5px;
 }
 
 .mode-logo {
     position: relative;
-    text-align: center;
     color: white;
-    margin-right: 0.25em;
     border: 2px solid transparent; /* Transparent border for inactive state */
-    height: 2em;
+    max-height: 2em;
+    max-width: 2em;
 }
 
 .mode-logo.active-mode {
@@ -44,8 +79,8 @@
 }
 
 .mode-logo-image {
-    height: 100%;
-    width: 100%;
+    max-height: 100%;
+    max-width: 100%;
     padding: 0.1em;
 }
 
@@ -54,7 +89,12 @@
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
-    pointer-events: none;
+}
+
+.mode-logo-image,
+.mode-logo-text {
+    display: block;
+    margin: 0 auto;
 }
 
 .zoom-controls {
@@ -62,12 +102,13 @@
     bottom: 10px;
     right: 10px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 10px;
-    padding: 5px;
+    padding: 3px;
+    margin: 0px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 1000;
 }
@@ -76,10 +117,10 @@
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin: 2px;
+    padding: 0px;
+    margin: 1px;
     width: 40px;
     height: 40px;
-    font-size: 1.2em;
     cursor: pointer;
     outline: none;
 }
@@ -90,7 +131,6 @@
 
 .grid-container {
     display: grid;
-    /* justify-content: center; */
     grid-template-columns: repeat(1, 100px);
     padding: 10px;
     overflow-x: auto;
@@ -103,21 +143,26 @@
     overflow: hidden;
 }
 
+.black {
+    background-color: #000; /* Black grid items */
+}
+
 .chair-container-in-grid {
     /* Chair with text in grid */
     position: relative;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100%;
     width: 100%;
-    user-select: none;
 }
 
 .chair-in-grid {
     /* Chair image in grid */
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
     object-fit: contain;
-    transition: transform 0.3s ease; /* Rotation transition */
+    transition: transform 0.1s ease; /* Rotation transition */
     transform-origin: center; /* Centered rotation */
 }
 
@@ -127,89 +172,87 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    pointer-events: none;
 }
 
-.selected-in-grid {
-    /* Selected stack */
-    border: 2px solid yellow;
-    background-color: rgba(255, 255, 0, 0.2);
+.faded {
+    opacity: 0.5;
+}
+
+.highlighted-yellow {
+    border-color: #da3;
+    background-color: rgba(221, 170, 51, 0.7);
+}
+
+.highlighted-blue {
+    border-color: #048;
+    background-color: rgba(0, 68, 136, 0.7);
 }
 
 .robot-in-grid {
     width: 100%;
     height: 100%;
     object-fit: contain;
-    user-select: none;
 }
 
 .chair-container-in-grid:hover,
-.robot-in-grid:hover,
 .mode-logo:hover {
     cursor: pointer;
 }
 
-/* For JSON output and send buttons */
-#output-json {
-    margin: auto;
-    width: 25%;
-    display: block;
+#rotateControlPanel {
+    position: fixed;
+    bottom: 100px;
+    left: 50%;
+    width: 70%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
 }
 
-#output-div {
-    margin: 20px auto 55px auto;
+#rotationRangeDegreeDiv {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
 }
 
-#send-json {
-    margin: auto;
+#rotationRange {
+    width: 70%;
+    margin-right: 10px;
+}
+
+#rotationButton {
+    width: 60%;
+}
+
+.grid-buttons {
     width: 25%;
-    display: block;
 }
 
 #send-div {
-    margin: 20px auto 55px auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 20px auto 170px auto;
 }
 
 /* For smaller screens */
-@media (max-width: 580px) {
-    .mode-logo {
-        font-size: 0.75em;
-    }
-    .mode-logo-text {
-        font-size: 0.75em;
-    }
-    .label {
-        font-size: 0.75em;
-    }
-}
-
-@media (max-width: 470px) {
-    .mode-logo {
-        font-size: 0.57em;
-    }
-    .mode-logo-text {
-        font-size: 0.8em;
-    }
-    .label {
-        font-size: 0.57em;
-    }
-
-    .zoom-button {
-        width: 30px;
-        height: 30px;
-        font-size: 1em;
-    }
-}
-
-@media (max-width: 360px) {
-    .mode-logo {
-        font-size: 0.5em;
+@media (max-width: 430px) {
+    .mode-logo-image {
+        font-size: 0.7em;
     }
     .mode-logo-text {
         font-size: 0.9em;
     }
     .label {
-        font-size: 0.5em;
+        font-size: 0.7em;
     }
     .zoom-button {
         width: 30px;
