--- a/App/app.css
+++ b/App/app.css
@@ -32,14 +32,63 @@ input[type="submit"],
     align-items: center;
 }
 
-#input h2 {
-    margin-top: 20px;
-}
-
 #dimensions {
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+#saved-layouts,
+#premade-templates,
+#input-dimensions,
+#input-pgm,
+#input-json {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    width: 75%;
+    padding: 10px;
+    margin: 10px auto;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+.layout-item {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5px;
+    width: 100%;
+}
+
+textarea {
+    resize: vertical;
+    width: 80%;
+}
+
+.layout-item button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+button {
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 5px;
+    cursor: pointer;
+    outline: none;
+}
+
+button:hover {
+    background-color: #ccc;
+}
+
+#layoutTitle,
+#roomStateLabel {
+    text-align: center;
+    margin: 10px;
 }
 
 #legend {
@@ -51,7 +100,7 @@ input[type="submit"],
     align-items: center;
     flex-wrap: wrap;
     background-color: white;
-    border: 1px solid #ccc;
+    border: 1px solid black;
     border-radius: 10px;
     padding: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -105,7 +154,7 @@ input[type="submit"],
     flex-direction: column;
     align-items: center;
     background-color: white;
-    border: 1px solid #ccc;
+    border: 1px solid black;
     border-radius: 10px;
     padding: 3px;
     margin: 0px;
@@ -114,19 +163,10 @@ input[type="submit"],
 }
 
 .zoom-button {
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 5px;
     padding: 0px;
     margin: 1px;
     width: 40px;
     height: 40px;
-    cursor: pointer;
-    outline: none;
-}
-
-.zoom-button:hover {
-    background-color: #ccc;
 }
 
 .grid-container {
@@ -190,6 +230,11 @@ input[type="submit"],
     opacity: 0.5; /* Make the preview chair faded */
 }
 
+.highlighted-red {
+    border-color: #b56;
+    background-color: rgba(187, 85, 102, 0.7);
+}
+
 .highlighted-yellow {
     border-color: #da3;
     background-color: rgba(221, 170, 51, 0.7);
@@ -204,6 +249,13 @@ input[type="submit"],
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+
+.preview-robot-in-grid {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    opacity: 0.5;
 }
 
 .chair-container-in-grid:hover,
@@ -221,7 +273,7 @@ input[type="submit"],
     flex-direction: column;
     align-items: center;
     background-color: white;
-    border: 1px solid #ccc;
+    border: 1px solid black;
     border-radius: 10px;
     padding: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -244,6 +296,26 @@ input[type="submit"],
     width: 60%;
 }
 
+#stack-counter {
+    position: fixed;
+    bottom: 100px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+}
+
+#stack-counter p {
+    margin: 0;
+}
+
 .grid-buttons {
     width: 25%;
 }
@@ -252,7 +324,17 @@ input[type="submit"],
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin: 20px auto 170px auto;
+    margin: 20px auto 20px auto;
+}
+
+#tutorial {
+    text-align: justify;
+    width: 70%;
+    margin: auto auto 170px auto;
+}
+
+#tutorial p {
+    margin-bottom: 10px;
 }
 
 /* For smaller screens */
